--- a/myapp/src/login_signin_dashboard/AuthenticationForms.css
+++ b/myapp/src/login_signin_dashboard/AuthenticationForms.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 150vh;
     margin: 0;
   }
   
@@ -28,8 +28,8 @@ body {
   
   .logo {
     width: 80px;
-    height: auto;
-    margin-bottom: 20px;
+    height: 60px;
+    margin-bottom: -20px;
   }
   
   h2 {
