--- a/myapp/src/student_dashboard/student_dashboard.css
+++ b/myapp/src/student_dashboard/student_dashboard.css
@@ -1,15 +1,22 @@
+.body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
 .bottom-right-corner {
     position: absolute;
     bottom: 0;
     right: 0;
-    margin: 20px; /* Optional: Add some margin if needed */
+    margin: 20px;
   }
   
 .bottom-left-corner {
     position: absolute;
     bottom: 0;
     left: 0;
-    margin: 20px; /* Optional: Add some margin if needed */
+    margin: 20px; 
   }
 
 .center {
@@ -17,4 +24,33 @@
     justify-content: center;
     align-items: center;
     height: 100vh; /* Full viewport height */
+}
+/*
+.profile-container {
+  width: 100px;  
+  height: 100px;
+  border-radius: 50%;  
+  overflow: hidden;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #ccc;
+}
+
+.profile-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+*/
+
+.profile-container {
+  background-color: black;
+  width:200px;
+  height:100px;
+}
+
+.profile-image {
+  width: 50%;
+  height: 50%
 }
