modified the log history page

--- a/myapp/src/student_dashboard/log_history/App.module.css
+++ b/myapp/src/student_dashboard/log_history/App.module.css
@@ -3,7 +3,7 @@
     display: flex;
     height: 100vh; /* Full viewport height */
     padding: 20px;
-    background-color: #e6f7ff; /* Very light blue background */
+    background-color: #b0e2e6; 
     border-radius: 10px;
   }
   
