--- a/myapp/src/student_dashboard/log_history/components/ContentBox.module.css
+++ b/myapp/src/student_dashboard/log_history/components/ContentBox.module.css
@@ -1,10 +1,11 @@
 /* ContentBox.module.css */
 .contentBox {
-    background-color: #fff; /* White background */
+    background-color: #fff;
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    height: 130px;
   }
   
   .contentBox h3 {
