--- a/myapp/src/student_dashboard/log_history/components/Sidebar.module.css
+++ b/myapp/src/student_dashboard/log_history/components/Sidebar.module.css
@@ -24,7 +24,7 @@
     padding: 10px;
     margin-bottom: 10px;
     border: none;
-    background-color: #e0e0e0; /* Lighter gray */
+    background-color: #7ecfaf; /* Lighter gray */
     border-radius: 5px;
     cursor: pointer;
   }
