--- a/myapp/src/student_dashboard/log_history/components/MainContent.module.css
+++ b/myapp/src/student_dashboard/log_history/components/MainContent.module.css
@@ -1,12 +1,12 @@
 /* MainContent.module.css */
 .mainContent {
-    flex: 1; /* Take remaining space */
+    flex: 1;
     padding: 20px;
     border-radius: 10px;
   }
   
   .mainContent h2 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   
