--- a/myapp/src/student_dashboard/log_issues/log_issues.css
+++ b/myapp/src/student_dashboard/log_issues/log_issues.css
@@ -24,7 +24,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh; /* Full viewport height */
+      height: 100vh; 
   }
   /*
   .profile-container {
@@ -49,7 +49,7 @@
     background-color: black;
     width:21.2%;
     height:100px;
-    border-radius: 10px;
+    border-radius: 3px;
     position: absolute;
     top: 10px;
     left: 10px;
@@ -69,5 +69,5 @@
     position: absolute;
     top:10px;
     left:10px;
-    border-radius: 10px;
+    border-radius: 3px;
   }
