worked on state variables for my issue form

--- a/myapp/src/student_dashboard/log_history/log_his.module.css
+++ b/myapp/src/student_dashboard/log_history/log_his.module.css
@@ -1,7 +1,8 @@
 /* App.module.css */
 .body {
     display: flex;
-    height: 100%; /* Full viewport height */
+    height: 100vh;
+    width: 100vw; /* Full viewport height */
     padding: 20px;
     background-color: #b0e2e6; 
   }
