--- a/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -1,11 +1,11 @@
 /* General Styles */
-body {
+.body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150vh;
+    height: 120vh;
     margin: 0;
   }
   
