--- a/myapp/src/student_dashboard/log_issues/components/components.module.css
+++ b/myapp/src/student_dashboard/log_issues/components/components.module.css
@@ -60,10 +60,11 @@
 .myform {
     background-color: white;
     border-radius: 3px;
-    width: 260px;
+    width: 27%;
     height: 100%;
     position: absolute;
-    left: 740px;
+    right: 1px;
+    top: 10px;
     
     .mybutton {
         padding: 5px 3px;
