--- a/myapp/src/student_dashboard/components/log_his.module.css
+++ b/myapp/src/student_dashboard/components/log_his.module.css
@@ -1,28 +1,20 @@
-.body {
-    background-color: #b0e2e6;
+/* App.module.css */
+/*.body {
+    display: flex;
     height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 1px;
-  }
+    width: 100vw;  Full viewport height 
+    padding: 20px;
+    background-color: #b0e2e6; 
+  } */
 
-
-.profile_image {
-  background-attachment: white;
-  width: 40%;
-  height: 20%;
-  border-radius: 3px;
-  position: absolute;
-  left: 30%;
-}
-
-.left_container {
+.left_component {
   background-color: white;
-  width: 21.2%;
+  width: 20%;
   height: 100%;
   position: absolute;
-  left:10px;
   border-radius: 3px;
+  left: 1%;
+  top: 1%;
 
   button {
     padding: 5px 10px;
@@ -49,7 +41,7 @@
     width: 90%;
 
   }
-
+  
   .logout {
     position: absolute;
     right: 1%;
@@ -57,3 +49,24 @@
 
   }
 }
+
+.log_status {
+  background-color: white;
+  width: 46%;
+  height: 80%;
+  position: absolute;
+  left: 22%;
+  top: 20%;
+  border-radius: 3px;
+}
+
+.log_history {
+  background-color: white;
+  width: 30%;
+  height: 100%;
+  position: absolute;
+  top:1%;
+  right:1%;
+  border-radius: 3px;
+}
+
