--- a/myapp/src/student_dashboard/components/log_issues.module.css
+++ b/myapp/src/student_dashboard/components/log_issues.module.css
@@ -1,19 +1,29 @@
-/* App.module.css */
-.body {
-    display: flex;
-    height: 100%; /* Full viewport height */
-    padding: 20px;
-    background-color: #b0e2e6; 
+/*.body {
+    background-color: #b0e2e6;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 1px;
   }
+*/
 
-.left_component {
+.profile_image {
+  background-attachment: white;
+  width: 40%;
+  height: 20%;
+  border-radius: 3px;
+  position: absolute;
+  left: 30%;
+  top:2%
+}
+
+.left_container {
   background-color: white;
-  width: 20%;
+  width: 21.2%;
   height: 100%;
   position: absolute;
+  left:10px;
   border-radius: 3px;
-  left: 1%;
-  top: 1%;
 
   button {
     padding: 5px 10px;
@@ -36,25 +46,11 @@
   .log_issue {
     position: absolute;
     left: 1%;
-    top: 38%;
-    width: 90%;
-
-  }
-  .notification {
-    position: absolute;
-    left: 1%;
     top: 44%;
     width: 90%;
-  }
-  
-  .profile {
-    position: absolute;
-    left: 1%;
-    top: 56%;
-    width: 90%;
 
   }
-  
+
   .logout {
     position: absolute;
     right: 1%;
@@ -62,14 +58,3 @@
 
   }
 }
-.pending_issues {
-  background-color: white;
-  width: 77%;
-  height: 88%;
-  position: absolute;
-  bottom:0%;
-  right:1%;
-  border-radius: 3px;
-  overflow-y: auto;
-}
-
