--- a/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -1,13 +1,4 @@
-/* General Styles */
-/*.body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120vh;
-    margin: 0;
-  }*/
+
   
   .container {
     display: flex;
@@ -40,7 +31,7 @@
   /* Input Styles */
   input[type="text"],
   input[type="password"],
-  select {
+  .select {
     width: 100%;
     padding: 10px;
     margin: 8px 0;
@@ -50,7 +41,7 @@
     font-size: 16px;
   }
   
-  select {
+  .lselect {
     appearance: none; /* Remove default arrow */
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
@@ -59,7 +50,7 @@
   }
   
   /* Button Styles */
-  button[type="submit"] {
+  .lbutton[type="submit"] {
     background-color: #222; /* Black */
     color: white;
     padding: 12px 20px;
@@ -71,7 +62,7 @@
     margin-top: 15px;
   }
   
-  button[type="submit"]:hover {
+  .lbutton[type="submit"]:hover {
     opacity: 0.8;
   }
   
