--- a/myapp/src/student_dashboard/components/log_issues.module.css
+++ b/myapp/src/student_dashboard/components/log_issues.module.css
@@ -1,11 +1,11 @@
-/*.body {
-    background-color: #b0e2e6;
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 1px;
-  }
-*/
+.container {
+  background-color: white;
+  width: 50%;
+  position: relative;
+  top: 20vh;
+  height: 80vh;
+  border-radius: 3px;
+}
 
 .profile_image {
   background-attachment: white;
@@ -17,44 +17,71 @@
   top:2%
 }
 
-.left_container {
+.myform {
   background-color: white;
-  width: 21.2%;
-  height: 100%;
+  width: 51%;
+  height: 100vh;
   position: absolute;
-  left:10px;
+  left: 51%;
+  top: 0px;
   border-radius: 3px;
+}
 
-  button {
-    padding: 5px 10px;
-    font-size: 10px;
-    background-color: rgb(181, 235, 181);
-    border-radius: 3px;
-    border-color: #f3f8f4;
-    position: relative;
-    display: block;
-    cursor: pointer;
+.lsubmit_button {
+  background-color: red;
+  color: white;
+  border-radius: 3px;
+  border-bottom: 5px;
+  position: absolute;
+  bottom: 10px;
+  left: 40%;
 
+}
+
+.lclear_button {
+  background-color: black;
+  color: white;
+  border-radius: 3px;
+  border-bottom: 5px;
+  position: absolute;
+  bottom: 10px;
+  left: 5%;
+}
+
+.rsubmit_buttons {
+  background-color: red;
+  color: white;
+  border-radius: 3px;
+  border-bottom: 5px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.select {
+  position: relative;
+  display: flex;
+  height: 25px;
+  width: 250px;
+  font-size: 10px;
+  border-radius: 5px;
+}
+.myoption{
+    font-size: 15px ;
   }
-  .log_his {
-    position: absolute;
-    left: 1%;
-    top: 50%;
-    width: 90%;
-    
-  }
-  .log_issue {
-    position: absolute;
-    left: 1%;
-    top: 44%;
-    width: 90%;
+.textarea {
+  position: absolute;
+  left: 10px;
+  bottom: 34px;
+  width: 350px;
+}
 
-  }
+h5 {
+  position:absolute;
+  right: 10px;
+}
 
-  .logout {
-    position: absolute;
-    right: 1%;
-    bottom: 1%;
-
-  }
+.issue {
+  position: absolute;
+  top: 30px;
 }
