--- a/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -31,6 +31,7 @@
   /* Input Styles */
   input[type="text"],
   input[type="password"],
+  input[type='email'],
   .select {
     width: 100%;
     padding: 10px;
