--- a/myapp/src/student_dashboard/components/log_issues.module.css
+++ b/myapp/src/student_dashboard/components/log_issues.module.css
@@ -5,6 +5,8 @@
   top: 20vh;
   height: 80vh;
   border-radius: 3px;
+  box-shadow: 0px 10px 20px #718c8e;
+  z-index: 10; 
 }
 
 .profile_image {
@@ -25,6 +27,8 @@
   left: 51%;
   top: 0px;
   border-radius: 3px;
+  box-shadow: 0px 10px 20px #718c8e;
+  z-index: 10; 
 }
 
 .lsubmit_button {
@@ -54,6 +58,7 @@
   border-radius: 3px;
   border-bottom: 5px;
   position: absolute;
+  width: 90%;
   bottom: 10px;
   right: 10px;
 }
