--- a/myapp/src/student_dashboard/studet_dashboard.css
+++ b/myapp/src/student_dashboard/studet_dashboard.css
@@ -5,6 +5,9 @@
     height: 100vh;
     position: absolute;
     top: 1%;
+    box-shadow: 0px 10px 20px #718c8e;
+    z-index: 10; 
+    
     
 }
 
@@ -15,6 +18,7 @@
     width: 75vw;
     height: 100vh;
     border-radius: 3px;
+
 }
 
 .mybuttons {
