--- a/myapp/src/student_dashboard/components/log_his.module.css
+++ b/myapp/src/student_dashboard/components/log_his.module.css
@@ -1,72 +1,9 @@
-/* App.module.css */
-/*.body {
-    display: flex;
-    height: 100vh;
-    width: 100vw;  Full viewport height 
-    padding: 20px;
-    background-color: #b0e2e6; 
-  } */
-
-.left_component {
+.container {
   background-color: white;
-  width: 20%;
+  position: absolute;
+  box-shadow: 0px 10px 20px #718c8e;
+  z-index: 10; 
+  width: 100%;
   height: 100%;
-  position: absolute;
-  border-radius: 3px;
-  left: 1%;
-  top: 1%;
-
-  button {
-    padding: 5px 10px;
-    font-size: 10px;
-    background-color: rgb(181, 235, 181);
-    border-radius: 3px;
-    border-color: #f3f8f4;
-    position: relative;
-    display: block;
-    cursor: pointer;
-
-  }
-  .log_his {
-    position: absolute;
-    left: 1%;
-    top: 50%;
-    width: 90%;
-    
-  }
-  .log_issue {
-    position: absolute;
-    left: 1%;
-    top: 44%;
-    width: 90%;
-
-  }
-  
-  .logout {
-    position: absolute;
-    right: 1%;
-    bottom: 1%;
-
-  }
-}
-
-.log_status {
-  background-color: white;
-  width: 46%;
-  height: 80%;
-  position: absolute;
-  left: 22%;
-  top: 20%;
   border-radius: 3px;
 }
-
-.log_history {
-  background-color: white;
-  width: 30%;
-  height: 100%;
-  position: absolute;
-  top:1%;
-  right:1%;
-  border-radius: 3px;
-}
-
