--- a/myapp/src/student_dashboard/components/log_issues.module.css
+++ b/myapp/src/student_dashboard/components/log_issues.module.css
@@ -37,8 +37,10 @@
   border-radius: 3px;
   border-bottom: 5px;
   position: absolute;
+  width: 45%;
   bottom: 10px;
-  left: 40%;
+  left: 50%;
+  border:none;
 
 }
 
@@ -49,18 +51,21 @@
   border-bottom: 5px;
   position: absolute;
   bottom: 10px;
-  left: 5%;
+  left: 2%;
+  width: 45%;
+  border: none;
 }
 
 .rsubmit_buttons {
   background-color: red;
   color: white;
+  border: none;
   border-radius: 3px;
   border-bottom: 5px;
   position: absolute;
-  width: 90%;
+  width: 95%;
+  right: 2.5%;
   bottom: 10px;
-  right: 10px;
 }
 
 .select {
