added log issue action to my form submissions

--- a/myapp/src/student_dashboard/studet_dashboard.css
+++ b/myapp/src/student_dashboard/studet_dashboard.css
@@ -26,7 +26,6 @@
     width: 100%;
     position: relative;
     top:30% ;
-    background-color: white;
     border-radius: 3px;
-    border-color: rgb(255, 255, 255)
+    border: none;
 }
