--- a/myapp/src/student_dashboard/studet_dashboard.css
+++ b/myapp/src/student_dashboard/studet_dashboard.css
@@ -23,9 +23,24 @@
 
 .mybuttons {
     margin-bottom: 10px;
-    width: 100%;
-    position: relative;
+    width: 50%;
+    position: absolute;
     top:30% ;
+    height: 25px;
     border-radius: 3px;
+    background-color: white;
+    color: black;
     border: none;
+    cursor: pointer;
+    transition: background-color 0.3ss ease;
+}
+.mybuttons:hover,
+.mybuttons.clicked {
+    background-color: rgb(114, 197, 114);
+}
+
+.imagecontainer {
+    background-color:black;
+    position: absolute;
+    top: 0%;
 }
