--- a/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -6,7 +6,12 @@
     align-items: center;
     width: 100%;
     height: 100%;
-  }
+    background-image: url('../../assets/background-images/ivorytower.jpeg'); 
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;
+}
+  
   
   .form_container {
     background-color: #b0e2e6; /* Light Blue-Green */
