--- a/myapp/src/registrar_dashboard/components/pending.module.css
+++ b/myapp/src/registrar_dashboard/components/pending.module.css
@@ -11,7 +11,7 @@
 .output_box {
     width: 96%;
     border-radius: 3px;
-    height: 60px;
+    height: 70px;
     border: 2px solid rgb(107, 105, 105);
     padding: 10px;
     background-color: #f8f8f8;
@@ -21,4 +21,31 @@
     overflow-y: auto;
     position: relative;
     left: 4px;
+    margin-top: 10px;
+}
+
+.pe {
+
+    font-family: Arial, sans-serif;  /* Sets the font family */
+    font-size: 9px;                 /* Sets the font size */
+    font-weight: bold;               /* Makes the text bold */
+    color: #333;                     /* Sets the text color */
+    text-align:left;              /* Centers the text horizontally */
+    line-height: 1.5;                /* Adjusts the line height for readability */
+    text-transform: uppercase;       /* Transforms text to uppercase */
+    letter-spacing: 1px;             /* Adjusts space between letters */
+    text-decoration:wavy;  /* Underlines the text */
+    position: relative;
+    left: 10px;
+  
+}
+
+.thebut {
+    color: white;
+    background-color: red;
+    border: none;
+    border-radius: 3px;
+    position: absolute;
+    right: 10px;
+    top: 15px;
 }
