--- a/myapp/src/registrar_dashboard/registrar_dashboard.css
+++ b/myapp/src/registrar_dashboard/registrar_dashboard.css
@@ -1,5 +1,5 @@
 .left_container {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 3px;
     width: 20vw;
     height: 100vh;
@@ -9,7 +9,6 @@
     left: 0;
     display: flex;
     flex-direction: column;
-    padding: 20px;
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds shadow for separation */
 }
 
@@ -17,12 +16,17 @@
     text-align: center;
     margin-bottom: 20px; /* Space between profile and navigation buttons */
     padding-bottom: 20px;
+    background-color: black;
     border-bottom: 2px solid #f0f0f0; /* Adds a divider line between profile and nav buttons */
+    display: flex; /* Enable Flexbox */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    height: 170px; /* Set a height to center the content vertically */
 }
 
 .profile_picture_container {
-    width: 80px;
-    height: 80px;
+    width: 135px;
+    height: 135px;
     border-radius: 50%;
     background-color: #ccc; /* Placeholder background */
     margin-bottom: 10px;
@@ -42,6 +46,7 @@
 
 
 .right_container {
+    background-color: rgba(255, 255, 255, 0.8);
     position: absolute;
     top: 1%;
     left: 22%;
