--- a/myapp/src/registrar_dashboard/registrar_dashboard.css
+++ b/myapp/src/registrar_dashboard/registrar_dashboard.css
@@ -1,4 +1,4 @@
-.left_container {
+.leftcontainer {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 3px;
     width: 20vw;
@@ -45,8 +45,8 @@
 }
 
 
-.right_container {
-    background-color: rgba(255, 255, 255, 0.8);
+.rightcontainer {
+    
     position: absolute;
     top: 1%;
     left: 22%;
