--- a/myapp/src/registrar_dashboard/registrar_dashboard.css
+++ b/myapp/src/registrar_dashboard/registrar_dashboard.css
@@ -16,7 +16,6 @@
     text-align: center;
     margin-bottom: 20px; /* Space between profile and navigation buttons */
     padding-bottom: 20px;
-    background-color: black;
     border-bottom: 2px solid #f0f0f0; /* Adds a divider line between profile and nav buttons */
     display: flex; /* Enable Flexbox */
     justify-content: center; /* Center horizontally */
@@ -30,6 +29,11 @@
     border-radius: 50%;
     background-color: #ccc; /* Placeholder background */
     margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
 }
 
 .profile_picture {
