--- a/frontend/myapp/src/student_dashboard/components/log_issues.module.css
+++ b/frontend/myapp/src/student_dashboard/components/log_issues.module.css
@@ -72,7 +72,7 @@
   position: relative;
   display: flex;
   height: 25px;
-  width: 360px;
+  width: 93%;
   font-size: 10px;
   left: 10px;
   border-radius: 5px;
@@ -85,7 +85,7 @@
   position: absolute;
   left: 10px;
   bottom: 34px;
-  width: 350px;
+  width: 91%;
 }
 
 h5 {
