added a logout button and it's fuctions

--- a/frontend/myapp/src/student_dashboard/studet_dashboard.css
+++ b/frontend/myapp/src/student_dashboard/studet_dashboard.css
@@ -42,6 +42,7 @@ body {
     border: none;
     cursor: pointer;
     transition: background-color 0.3ss ease;
+    
 }
 .mybuttons:hover,
 .mybuttons.clicked {
@@ -64,4 +65,19 @@ body {
     object-fit: cover; /* Ensures image fills the circle */
   }
   
-  
+  .logout_button {
+    position: absolute;
+    left: 35%;
+    bottom: 2%;
+    width: 30%;
+    height: 6%;
+    background-color: white;
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+
+  }
+  .logout_button:hover {
+    background-color: red; 
+  }
