--- a/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
+++ b/frontend/myapp/src/login_signin_dashboard/AuthenticationForms.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image: url('../assets/background-images/ivorytower.jpeg'); 
     background-size: cover; 
     background-position: center; 
