--- a/frontend/myapp/src/student_dashboard/components/log_issues.module.css
+++ b/frontend/myapp/src/student_dashboard/components/log_issues.module.css
@@ -41,6 +41,7 @@
   bottom: 10px;
   left: 50%;
   border:none;
+  cursor: pointer;
 
 }
 
@@ -54,6 +55,7 @@
   left: 2%;
   width: 45%;
   border: none;
+  cursor: pointer;
 }
 
 .rsubmit_buttons {
@@ -66,6 +68,7 @@
   width: 95%;
   right: 2.5%;
   bottom: 10px;
+  cursor: pointer;
 }
 
 .select {
