added a profile view div

--- a/frontend/myapp/src/student_dashboard/components/profile.module.css
+++ b/frontend/myapp/src/student_dashboard/components/profile.module.css
@@ -30,4 +30,30 @@
     border: 2px solid;
     border-radius: 3px;
 }
-  
+
+.profileview{
+    border-radius: 3px;
+    border-color: black;
+    border: 1px solid;
+    position: absolute;
+    width: 53%;
+    height: 90%;
+    left: 45%;
+    top: 2%;
+}
+
+.label {
+    font-family: Arial, sans-serif;  /* Sets the font family */
+    font-size: 15px;                 /* Sets the font size */
+    font-weight: bold;               /* Makes the text bold */
+    color: #333;                     /* Sets the text color */
+    text-align: left;              /* Centers the text horizontally */
+    line-height: 1.5;                /* Adjusts the line height for readability */
+    text-transform: uppercase;       /* Transforms text to uppercase */
+    letter-spacing: 1px;             /* Adjusts space between letters */
+    text-decoration:wavy;  /* Underlines the text */
+    position: relative;
+    padding: 0px;
+    left: 2%;
+    
+  }
