added css styles to the profile view

--- a/frontend/myapp/src/student_dashboard/components/profile.module.css
+++ b/frontend/myapp/src/student_dashboard/components/profile.module.css
@@ -7,7 +7,7 @@
 
 .label {
     font-family: Arial, sans-serif;  /* Sets the font family */
-    font-size: 15px;                 /* Sets the font size */
+    font-size: 12px;                 /* Sets the font size */
     font-weight: bold;               /* Makes the text bold */
     color: #333;                     /* Sets the text color */
     text-align: left;              /* Centers the text horizontally */
@@ -32,21 +32,22 @@
 }
 
 .profileview{
+    background-color: rgb(178, 211, 179);
     border-radius: 3px;
     border-color: black;
     border: 1px solid;
     position: absolute;
     width: 53%;
-    height: 90%;
+    height: 96%;
     left: 45%;
     top: 2%;
 }
 
-.label {
+.label1 {
     font-family: Arial, sans-serif;  /* Sets the font family */
-    font-size: 15px;                 /* Sets the font size */
+    font-size: 12px;                 /* Sets the font size */
     font-weight: bold;               /* Makes the text bold */
-    color: #333;                     /* Sets the text color */
+    color: #aa2424;                     /* Sets the text color */
     text-align: left;              /* Centers the text horizontally */
     line-height: 1.5;                /* Adjusts the line height for readability */
     text-transform: uppercase;       /* Transforms text to uppercase */
