--- a/frontend/myapp/src/registrar_dashboard/registrar_dashboard.css
+++ b/frontend/myapp/src/registrar_dashboard/registrar_dashboard.css
@@ -1,5 +1,5 @@
-.leftcontainer {
-    background-color: rgba(255, 255, 255, 0.8);
+.left_container {
+    background-color: white;
     border-radius: 3px;
     width: 20vw;
     height: 100vh;
@@ -9,18 +9,7 @@
     left: 0;
     display: flex;
     flex-direction: column;
-    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds shadow for separation */
-}
-
-.profile_section {
-    text-align: center;
-    margin-bottom: 20px; /* Space between profile and navigation buttons */
-    padding-bottom: 20px;
-    border-bottom: 2px solid #f0f0f0; /* Adds a divider line between profile and nav buttons */
-    display: flex; /* Enable Flexbox */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    height: 170px; /* Set a height to center the content vertically */
+    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
 .profile_picture_container {
