--- a/frontend/myapp/src/registrar_dashboard/components/manage.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/manage.module.css
@@ -12,7 +12,7 @@
     border: 1px solid black;
     position: absolute;
     width: 50%;
-    height: 20%;
+    height: 30%;
     left: 2%;
     bottom: 2%;
 }
@@ -30,7 +30,7 @@
     text-decoration:wavy;  /* Underlines the text */
     position: relative;
     left: 10px;
-    padding: 5px;
+    padding: 0.1%;
     
     .input {
         width: 70%;
@@ -56,7 +56,7 @@
     background-color: white;
     border: 1px solid black;
     position: absolute;
-    height: 75%;
+    height: 65%;
     width: 50%;
     left: 2%;
     top: 1.5%;
