--- a/frontend/myapp/src/student_dashboard/components/log_issues.module.css
+++ b/frontend/myapp/src/student_dashboard/components/log_issues.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: white;
+  background-color:  #f5f5f5;
   width: 50%;
   position: relative;
   top: 20vh;
@@ -20,7 +20,7 @@
 }
 
 .myform {
-  background-color: white;
+  background-color:  #f5f5f5;
   width: 51%;
   height: 100vh;
   position: absolute;
@@ -98,6 +98,7 @@ h5 {
 }
 
 .issue {
+  background-color: white;
   position: absolute;
   top: 50px;
   width: 95%;
