added css styles to the profile piture container and icon

--- a/frontend/myapp/src/student_dashboard/student_dashboard.css
+++ b/frontend/myapp/src/student_dashboard/student_dashboard.css
@@ -82,5 +82,7 @@ body {
     background-color: red; 
   }
   .pp {
-    position: absolute
+    position: absolute;
+    left: 0%;
+    top: 0%
   }
