--- a/frontend/myapp/src/student_dashboard/components/profile.module.css
+++ b/frontend/myapp/src/student_dashboard/components/profile.module.css
@@ -1,6 +1,6 @@
 .container{
     background-color: #f5f5f5;
-
+    position: absolute;
     height: 100vh;
     width: 95%;
     border-radius: 3px;
@@ -85,11 +85,12 @@
   
   .upload__image_wrapper button {
     position: relative;
+    top: 5%;
     left: 2%;
     background-color: #2e8b57;
     color: white;
     border: none;
-    padding: 8px 16px;
+    padding: 4px 10px;
     margin-right: 10px;
     border-radius: 6px;
     cursor: pointer;
