--- a/frontend/myapp/src/registrar_dashboard/components/manage.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/manage.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #f5f5f5;
     height: 100%;
     width: 100%;
     border-radius: 3px;
@@ -8,13 +8,14 @@
 
 .lecturer{
     background-color:white;
-    border-radius: 3px;
+    border-radius: 5px;
     border: 1px solid black;
     position: absolute;
     width: 50%;
     height: 30%;
     left: 2%;
     bottom: 2%;
+
 }
 
 .pe {
@@ -45,7 +46,7 @@
     border: 1px solid black;
     position: absolute;
     height:96%;
-    border-radius: 3px;
+    border-radius: 5px;
     top: 1.5%;
     right: 1%;
     width: 46%;
@@ -60,5 +61,6 @@
     width: 50%;
     left: 2%;
     top: 1.5%;
+    border-radius: 5px;
     overflow-y: scroll;
 }
