--- a/frontend/myapp/src/student_dashboard/components/profile.module.css
+++ b/frontend/myapp/src/student_dashboard/components/profile.module.css
@@ -1,11 +1,11 @@
-.container{
-    background-color: #f5f5f5;
-    position: absolute;
-    height: 100vh;
-    width: 95%;
-    border-radius: 3px;
+.profedit{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: absolute;
+  width: 50%;
+  height: 87%;
+  border-radius: 5px;
+  top: 10%;
 }
-
 .label {
     font-family: Arial, sans-serif;  /* Sets the font family */
     font-size: 12px;                 /* Sets the font size */
@@ -62,15 +62,15 @@
   .green_form {
     background-color: #e6f5e6; /* soft green */
     border-left: 6px solid #2e8b57; /* darker green border */
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 20px 24px;
     margin-top: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 100%;
     max-width: 400px;
     position: absolute;
-    left: 45%;
-    top: 2%;
+    left: 53%;
+    top: 6%;
     height: 80%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
