--- a/frontend/myapp/src/student_dashboard/student_dashboard.css
+++ b/frontend/myapp/src/student_dashboard/student_dashboard.css
@@ -1,9 +1,5 @@
 body {
-    background-image: url('../images/background.png'); /* Relative path */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
+    background-color:  #f5f5f5;
   }
   
 
