--- a/frontend/myapp/src/registrar_dashboard/components/profile.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/profile.module.css
@@ -1,9 +1,10 @@
-.container{
-    background-color: #f5f5f5;
-    position: absolute;
-    height: 100vh;
-    width: 95%;
-    border-radius: 3px;
+.profedit{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: absolute;
+  width: 50%;
+  height: 87%;
+  border-radius: 5px;
+  top: 10%;
 }
 
 .label {
@@ -21,10 +22,9 @@
     left: 2%;
     
   }
-
 .text{
-    height: 4%;
-    width: 40%;
+    height: 5%;
+    width: 90%;
     position: relative;
     left: 2%;
     border-color: black;
@@ -65,12 +65,12 @@
     border-radius: 10px;
     padding: 20px 24px;
     margin-top: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 100%;
     max-width: 400px;
     position: absolute;
-    left: 45%;
-    top: 2%;
+    left: 51%;
+    top: 6%;
     height: 80%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
@@ -136,11 +136,10 @@
   .image_buttons button:hover {
     background-color: #222;
   }
-
   .save {
     position: relative;
-    top: 10%;
-    left: -5%;
+    top: 6%;
+    left: 2%;
     background-color: #56a478;
     color: white;
     border-radius: 3px;
