--- a/frontend/myapp/src/registrar_dashboard/components/home.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/home.module.css
@@ -6,6 +6,7 @@
     width: 30%;
     border-radius: 5px;
     left: 1%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .issues {  
@@ -16,6 +17,7 @@
     width: 30%;
     border-radius: 5px;
     left: 35%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .assigned {  
@@ -26,4 +28,5 @@
     width: 30%;
     border-radius: 5px;
     left: 70%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
