--- a/frontend/myapp/src/registrar_dashboard/components/pending.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/pending.module.css
@@ -50,3 +50,30 @@
     right: 10px;
     top: 15px;
 }
+ 
+.popupBackdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(3px);
+    z-index: 1000;
+  }
+  .popup {
+    position: fixed;
+    z-index: 1001;
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  
+.blurBackground {
+    filter: blur(5px);
+    transition: filter 0.3s ease;
+  }
