--- a/frontend/myapp/src/lecturer_dashboard/components/home.module.css
+++ b/frontend/myapp/src/lecturer_dashboard/components/home.module.css
@@ -9,7 +9,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.issues {  
+.resolved {  
     background-color: white;
     box-shadow: 2cm;
     position: absolute;
@@ -20,7 +20,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.assigned {  
+.average {  
     background-color: white;
     box-shadow: 2cm;
     position: absolute;
