added css styling to the popup buttons

--- a/frontend/myapp/src/registrar_dashboard/components/pending.module.css
+++ b/frontend/myapp/src/registrar_dashboard/components/pending.module.css
@@ -100,4 +100,15 @@
   position: relative;
   top: 10%;
   left: 30%;
+  cursor: pointer;
+  color: white;
+}
+
+.cancelbut {
+  background-color: rgb(236, 113, 113);
+  position: relative;
+  top: 10%;
+  left: 35%;
+  cursor: pointer;
+  color: white;
 }
