--- a/frontend/myapp/src/lecturer_dashboard/components/issue_his.module.css
+++ b/frontend/myapp/src/lecturer_dashboard/components/issue_his.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.85 v);
     position: absolute;
     box-shadow: 0px 10px 20px #718c8e;
     width: 100%;
