--- a/frontend/myapp/src/lecturer_dashboard/components/profile.module.css
+++ b/frontend/myapp/src/lecturer_dashboard/components/profile.module.css
@@ -1,5 +1,5 @@
 .container{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.85 v); 
     height: 100vh;
     width: 100%;
     border-radius: 3px;
