--- a/frontend/myapp/src/student_dashboard/components/log_issues.module.css
+++ b/frontend/myapp/src/student_dashboard/components/log_issues.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color:  #f5f5f5;
+  background-color: rgba(255, 255, 255, 0.85);
   width: 50%;
   position: relative;
   top: 20vh;
@@ -20,7 +20,7 @@
 }
 
 .myform {
-  background-color:  #f5f5f5;
+  background-color:  rgba(255, 255, 255, 0.85);
   width: 51%;
   height: 100vh;
   position: absolute;
