--- a/frontend/myapp/src/student_dashboard/student_dashboard.css
+++ b/frontend/myapp/src/student_dashboard/student_dashboard.css
@@ -1,7 +1,17 @@
 body {
     background-color:  #f5f5f5;
   }
-  
+
+.student-dashboard-container {
+    background-image: url("../assets/background-images/field_image_Mak-Library-Sida-application.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    position: relative;
+}   
+
+
+
 
 .left_container {
     background-color: white;
